--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,15 @@ jobs:
         uses: actions/checkout@v2
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v1
-      - name: login to github container registry
+      - name: login to docker hub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/my-container-test:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-container-test:latest
